fix gallery overflow

--- a/style.css
+++ b/style.css
@@ -341,6 +341,11 @@ button.splide__pagination__page.is-active {
   background: var(--colore-idroleleRosso) !important;
   fill: var(--colore-idroleleRosso) !important;
 }
+
+div#testimonial__splide button.splide__pagination__page.is-active {
+  background: var(--colore-azzurroScuro) !important;
+  fill: var(--colore-azzurroScuro) !important;
+}
 /* SPLIDE end*/
 
 /* ----servizi start */
@@ -491,6 +496,10 @@ div.testimonial-container {
   text-align: right;
   width: 100%;
   color: var(--colore-azzurroScuro);
+}
+
+#testimonial__splide-list .splide__slide {
+  margin-bottom: 20px;
 }
 /* recensioni end */
 /* CONTENT END */
@@ -931,6 +940,7 @@ input.error {
   }
 
   div.testimonial-container {
-    max-width: 80vw;
+    max-width: none;
+    width: 300px;
   }
 }
